--- a/Inkscape/Inkscapes nybörjarguide/changing-text-color.po
+++ b/Inkscape/Inkscapes nybörjarguide/changing-text-color.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: Inkscape Beginners' Guide 1.3\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2025-05-13 20:11+0200\n"
-"PO-Revision-Date: 2025-05-15 17:18+0200\n"
+"PO-Revision-Date: 2025-07-27 19:14+0200\n"
 "Last-Translator: Daniel Nylander <github@danielnylander.se>\n"
 "Language-Team: sv <LL@li.org>\n"
 "Language: sv\n"
@@ -38,7 +38,7 @@ msgstr ""
 "vektorobjekt i Inkscape. Först måste du markera texten, eller med hjälp "
 "av textverktyget kan du till och med markera ord eller tecken i en text, "
 "och sedan klickar du på den färg du vill ha. Texten kan ha en separat "
-"färg för fyllning och slag, precis som alla objekt i Inkscape. Du kan "
+"färg för fyllning och streck, precis som alla objekt i Inkscape. Du kan "
 "också använda en gradient på en text."
 
 #: ../../source/changing-text-color.rst:11
