--- a/Inkscape/Inkscapes nybörjarguide/clipping-and-masking.po
+++ b/Inkscape/Inkscapes nybörjarguide/clipping-and-masking.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: Inkscape Beginners' Guide 1.3\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2025-05-13 20:11+0200\n"
-"PO-Revision-Date: 2025-05-13 20:20+0200\n"
+"PO-Revision-Date: 2025-07-27 19:37+0200\n"
 "Last-Translator: Daniel Nylander <github@danielnylander.se>\n"
 "Language-Team: sv <LL@li.org>\n"
 "Language: sv\n"
@@ -29,30 +29,30 @@ msgstr "Klippning och maskering"
 msgid ""
 "These two features are both employed in the same way: put the object that "
 "will serve as clip (or mask) above the object that you want to clip (or "
-"mask). Then select both objects, and use :menuselection:`Object --> Clip "
-"--> Set` or :menuselection:`Object --> Mask --> Set`. The top object will "
+"mask). Then select both objects, and use :menuselection:`Object --> Clip --"
+"> Set` or :menuselection:`Object --> Mask --> Set`. The top object will "
 "then become invisible and work to hide parts of the bottom object."
 msgstr ""
-"Dessa två funktioner används båda på samma sätt: placera det objekt som "
-"ska fungera som klipp (eller mask) ovanför det objekt som du vill klippa "
-"(eller maskera). Markera sedan båda objekten och "
-"använd :menuselection:`Object --> Clip --> Set` "
-"eller :menuselection:`Object --> Mask --> Set`. Det översta objektet blir "
-"då osynligt och arbetar för att dölja delar av det understa objektet."
+"Dessa två funktioner används båda på samma sätt: placera det objekt som ska "
+"fungera som klipp (eller mask) ovanför det objekt som du vill klippa (eller "
+"maskera). Markera sedan båda objekten och använd :menuselection:`Objekt --> "
+"Klipp --> Ställ in` eller :menuselection:`Objekt --> Mask --> Ställ in`. "
+"Det översta objektet blir då osynligt och arbetar för att dölja delar av "
+"det understa objektet."
 
 #: ../../source/clipping-and-masking.rst:11 5c2b98355b24463a9443caa281bd3cc8
 msgid ""
-"Clips and masks give different results. A clip allows you to hide all "
-"parts of the bottom object that are outside the clip object. The colors "
-"of a mask object affect the opacity of the bottom object. The darker and "
-"the more transparent the mask, the more transparent the masked object "
-"will become. A white mask works just like a clip."
+"Clips and masks give different results. A clip allows you to hide all parts "
+"of the bottom object that are outside the clip object. The colors of a mask "
+"object affect the opacity of the bottom object. The darker and the more "
+"transparent the mask, the more transparent the masked object will become. A "
+"white mask works just like a clip."
 msgstr ""
-"Klipp och masker ger olika resultat. Med ett klipp kan du dölja alla "
-"delar av det nedre objektet som ligger utanför klippobjektet. Färgerna i "
-"ett maskobjekt påverkar opaciteten i det nedre objektet. Ju mörkare och "
-"ju mer transparent masken är, desto mer transparent blir det maskerade "
-"objektet. En vit mask fungerar precis som ett klipp."
+"Klipp och masker ger olika resultat. Med ett klipp kan du dölja alla delar "
+"av det nedre objektet som ligger utanför klippobjektet. Färgerna i ett "
+"maskobjekt påverkar opaciteten i det nedre objektet. Ju mörkare och ju mer "
+"transparent masken är, desto mer transparent blir det maskerade objektet. "
+"En vit mask fungerar precis som ett klipp."
 
 #: ../../source/clipping-and-masking.rst:17 f31fdcf7f65a46249a42860b2792f253
 msgid "Original object"
@@ -71,7 +71,7 @@ msgid ""
 "The path for clipping (and masking) has been positioned above the head of "
 "the griffin."
 msgstr ""
-"Slingan för klippning (och maskering) har placerats ovanför griffelns huvud."
+"Slingan för klippning (och maskering) har placerats ovanför gripens huvud."
 
 #: ../../source/clipping-and-masking.rst:29 58d78bb97e9c4941be1cf04520562611
 msgid "Result of clipping and masking"
@@ -79,8 +79,8 @@ msgstr "Resultat av klippning och maskering"
 
 #: ../../source/clipping-and-masking.rst:33 e56de2ae865b4c36bde7a1c59ad1af4b
 msgid ""
-"On the left, the griffin's head was clipped with the circle. On the "
-"right, the circle was used as a mask."
+"On the left, the griffin's head was clipped with the circle. On the right, "
+"the circle was used as a mask."
 msgstr ""
-"Till vänster har griffelns huvud klippts med cirkeln. Till höger användes "
+"Till vänster har gripens huvud klippts med cirkeln. Till höger användes "
 "cirkeln som en mask."
