--- a/Inkscape/Inkscapes nybörjarguide/cloning-objects.po
+++ b/Inkscape/Inkscapes nybörjarguide/cloning-objects.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: Inkscape Beginners' Guide 1.3\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2025-05-13 20:11+0200\n"
-"PO-Revision-Date: 2025-05-15 19:12+0200\n"
+"PO-Revision-Date: 2025-07-27 20:14+0200\n"
 "Last-Translator: Daniel Nylander <github@danielnylander.se>\n"
 "Language-Team: sv <LL@li.org>\n"
 "Language: sv\n"
@@ -57,7 +57,7 @@ msgid ""
 msgstr ""
 "Den nya klonen kommer att visas ovanpå originalet och följa med i alla "
 "ändringar som görs på originalet, oavsett om de påverkar dess stil "
-"(stroke, fill,...) eller dess form."
+"(streck, fyllning,…) eller dess form."
 
 #: ../../source/cloning-objects.rst:15 d3ea52faac774f1da11b0118d6005426
 msgid ""
@@ -75,13 +75,13 @@ msgid ""
 "question mark button |Unset color icon| in the :guilabel:`Fill and "
 "Stroke` dialog."
 msgstr ""
-"För att ta bort en färg från ett objekt måste du 'unset' dess färg med "
+"För att ta bort en färg från ett objekt måste du ‘ta bort‘ dess färg med "
 "hjälp av frågeteckenknappen |Unset color icon| i "
-"dialogrutan :guilabel:`Fill and Stroke`."
+"dialogrutan :guilabel:`Fyllning och streck`."
 
 #: ../../source/cloning-objects.rst:35 440f5ad1543c4ce49db4eef7d6c63d00
 msgid "Unset color icon"
-msgstr "Ikon för oinställd färg"
+msgstr "Ikon för ta bort färg"
 
 #: ../../source/cloning-objects.rst:22 590c8a03621d4f188dccf253ba8507c7
 msgid "The left, selected object is a clone of the right object."
@@ -106,14 +106,14 @@ msgid ""
 "bar."
 msgstr ""
 "Om du vill göra en klon till ett självständigt, fullt redigerbart objekt "
-"måste du **koppla bort** den från dess ursprungliga förälder "
-"med :kbd:`Shift` + :kbd:`Alt` + :kbd:`D`, :menuselection:`Redigera --> "
-"Klona --> Koppla loss klon` eller genom att klicka på motsvarande ikon |"
+"måste du **avlänka** den från dess ursprungliga förälder "
+"med :kbd:`Skift` + :kbd:`Alt` + :kbd:`D`, :menuselection:`Redigera --> "
+"Klona --> Avlänka klon` eller genom att klicka på motsvarande ikon |"
 "Unlink clone icon| i kommandofältet."
 
 #: ../../source/cloning-objects.rst:37 71328d6af6564e7b9d4dc7049574d2fe
 msgid "Unlink clone icon"
-msgstr "Koppla bort klonens ikon"
+msgstr "Ikon för avlänka klon"
 
 #: ../../source/cloning-objects.rst:31 f0d266b6044e44a2b81200937ec36f91
 msgid ""
@@ -122,5 +122,5 @@ msgid ""
 "the menu."
 msgstr ""
 "För att välja den ursprungliga föräldern till en klon kan du trycka "
-"på :kbd:`Shift` + :kbd:`D` eller använda :menuselection:`Redigera --> "
+"på :kbd:`Skift` + :kbd:`D` eller använda :menuselection:`Redigera --> "
 "Klona --> Välj original` i menyn."
