--- a/Inkscape/Inkscapes nybörjarguide/color.po
+++ b/Inkscape/Inkscapes nybörjarguide/color.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: Inkscape Beginners' Guide 1.3\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2025-05-13 20:11+0200\n"
-"PO-Revision-Date: 2025-05-13 20:30+0200\n"
+"PO-Revision-Date: 2025-07-27 19:20+0200\n"
 "Last-Translator: Daniel Nylander <github@danielnylander.se>\n"
 "Language-Team: sv <LL@li.org>\n"
 "Language: sv\n"
@@ -41,10 +41,10 @@ msgid ""
 "**gradient** (e.g. a smooth transition from green to blue)."
 msgstr ""
 "För ett vektorobjekt kan en separat stil definieras för dess kontur "
-"(eller **stroke**) och dess huvudfärg (eller **fill**). Detta kan vara "
-"en **vanlig färg** (t.ex. mörkröd), ett **mönster** (t.ex. ränder eller "
-"blommor) eller en **gradient** (t.ex. en mjuk övergång från grönt till "
-"blått)."
+"(eller **streck**) och dess huvudfärg (eller **fyllning**). Detta kan "
+"vara en **vanlig färg** (t.ex. mörkröd), ett **mönster** (t.ex. ränder "
+"eller blommor) eller en **gradient** (t.ex. en mjuk övergång från grönt "
+"till blått)."
 
 #: ../../source/color.rst:12 55337399c4f5425392e87c8967812b5f
 msgid ""
@@ -55,9 +55,9 @@ msgid ""
 "tool."
 msgstr ""
 "Inkscape levereras med ett par mönster, men gör det också enkelt att "
-"skapa egna **egna mönster**. Att lägga till en enfärgad färg - det vill "
-"säga en enhetlig färg - kan enkelt åstadkommas genom att använda en av "
-"de färdiga paletterna. Gradienter skapas direkt på duken med ett "
+"skapa egna **anpassade mönster**. Att lägga till en vanlig färg - det "
+"vill säga en enhetlig färg - kan enkelt åstadkommas genom att använda en "
+"av de färdiga paletterna. Gradienter skapas direkt på duken med ett "
 "särskilt verktyg."
 
 #: ../../source/color.rst:17 eb78b9c8de164c119ab9c6cb961f8fc3
@@ -67,7 +67,7 @@ msgid ""
 "patterns and create our own custom patterns. We will also learn how to "
 "modify the stroke style (e.g. make it dashed) and how to use markers."
 msgstr ""
-"I det här avsnittet ska vi lära oss hur man applicerar en enfärgad färg "
+"I det här avsnittet ska vi lära oss hur man tillämpar en enfärgad färg "
 "på olika sätt, hur man skapar egna gradienter och hur man använder "
 "standardmönster och skapar egna mönster. Vi lär oss också hur man ändrar "
 "streckstilen (t.ex. gör den streckad) och hur man använder markörer."
