--- a/Inkscape/Inkscapes nybörjarguide/copy-and-duplicate.po
+++ b/Inkscape/Inkscapes nybörjarguide/copy-and-duplicate.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: Inkscape Beginners' Guide 1.3\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2025-05-13 20:11+0200\n"
-"PO-Revision-Date: 2025-05-13 20:29+0200\n"
+"PO-Revision-Date: 2025-07-27 19:17+0200\n"
 "Last-Translator: Daniel Nylander <github@danielnylander.se>\n"
 "Language-Team: sv <LL@li.org>\n"
 "Language: sv\n"
@@ -31,8 +31,8 @@ msgid ""
 "also works in Inkscape, but its brother :guilabel:`Duplicate`, "
 "with :kbd:`Ctrl` + :kbd:`D` is very useful, too."
 msgstr ""
-"Den berömda kortkommandot :guilabel:`Copy` :kbd:`Ctrl` + :kbd:`C` "
-"fungerar också i Inkscape, men dess bror :guilabel:`Duplicate`, "
+"Den berömda kortkommandot :guilabel:`Kopiera` :kbd:`Ctrl` + :kbd:`C` "
+"fungerar också i Inkscape, men dess bror :guilabel:`Duplicera`, "
 "med :kbd:`Ctrl` + :kbd:`D` är också mycket användbar."
 
 #: ../../source/copy-and-duplicate.rst:9 42255008ca834e6991c9f89e05b32248
