--- a/Inkscape/Inkscapes nybörjarguide/copying-a-color.po
+++ b/Inkscape/Inkscapes nybörjarguide/copying-a-color.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: Inkscape Beginners' Guide 1.3\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2025-05-13 20:11+0200\n"
-"PO-Revision-Date: 2025-05-13 20:25+0200\n"
+"PO-Revision-Date: 2025-07-27 19:22+0200\n"
 "Last-Translator: Daniel Nylander <github@danielnylander.se>\n"
 "Language-Team: sv <LL@li.org>\n"
 "Language: sv\n"
@@ -37,9 +37,10 @@ msgid ""
 "color. It will be applied to all selected objects automatically."
 msgstr ""
 "**Markering av flera objekt**: markera alla objekt vars färg du vill "
-"ändra (håll ned :kbd:`Shift` och klicka, eller dra en markeringsruta "
-"runt dem), öppna sedan dialogrutan :guilabel:`Fill and Stroke` och välj "
-"en färg. Den kommer automatiskt att appliceras på alla markerade objekt."
+"ändra (håll ned :kbd:`Skift` och klicka, eller dra en markeringsruta "
+"runt dem), öppna sedan dialogrutan :guilabel:`Fyllning och streck` och "
+"välj en färg. Den kommer automatiskt att tillämpas på alla markerade "
+"objekt."
 
 #: ../../source/copying-a-color.rst:10 a73e904324614805829e99d911d2dcff
 msgid ""
@@ -48,14 +49,14 @@ msgid ""
 "canvas, on an area where it has the color that you want to apply. The "
 "selected object's color will change accordingly."
 msgstr ""
-"**Använd droppverktyget**: markera ett objekt, aktivera sedan Dropper "
-"tool genom att klicka på dess ikon |Dropper tool icon|, klicka sedan på "
-"canvas, på ett område där det har den färg som du vill använda. Det "
-"valda objektets färg kommer att ändras i enlighet med detta."
+"**Använd pipettverktyget**: markera ett objekt, aktivera sedan Pipett-"
+"verktyget genom att klicka på dess ikon |Dropper tool icon|, klicka "
+"sedan på duken, på ett område där det har den färg som du vill tillämpa. "
+"Det valda objektets färg kommer att ändras i enlighet med detta."
 
 #: ../../source/copying-a-color.rst:21 968d2d143b9745d2819f92acb49fcb38
 msgid "Dropper tool icon"
-msgstr "Ikon för droppverktyg"
+msgstr "Ikon för pipettverktyg"
 
 #: ../../source/copying-a-color.rst:12 1f738eb8643040e08df5a897f05f6b42
 msgid ""
@@ -66,9 +67,9 @@ msgid ""
 "color, but also the stroke width and style, a text's font style and any "
 "patterns or gradients."
 msgstr ""
-"**Kopiera hela stilen för ett objekt för att använda den på ett annat "
+"**Kopiera hela stilen för ett objekt för att tillämpa den på ett annat "
 "objekt:** välj objektet, kopiera det till urklipp med :kbd:`Ctrl` "
 "+ :kbd:`C`, välj sedan det andra objektet och klistra bara in stilen "
-"med :kbd:`Shift` + :kbd:`Ctrl` + :kbd:`V`. Detta kopierar inte bara "
-"fyllnings- och strokefärgen, utan även strokebredden och stilen, en "
+"med :kbd:`Skift` + :kbd:`Ctrl` + :kbd:`V`. Detta kopierar inte bara "
+"fyllnings- och streckfärgen, utan även streckbredden och stilen, en "
 "texts typsnittsstil och eventuella mönster eller gradienter."
