--- a/Inkscape/Inkscapes nybörjarguide/custom-markers.po
+++ b/Inkscape/Inkscapes nybörjarguide/custom-markers.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: Inkscape Beginners' Guide 1.3\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2025-05-13 20:11+0200\n"
-"PO-Revision-Date: 2025-05-13 20:25+0200\n"
+"PO-Revision-Date: 2025-07-27 19:31+0200\n"
 "Last-Translator: Daniel Nylander <github@danielnylander.se>\n"
 "Language-Team: sv <LL@li.org>\n"
 "Language: sv\n"
@@ -23,7 +23,7 @@ msgstr ""
 
 #: ../../source/custom-markers.rst:3 ecc807b2816d49c6873d95a67d3eb0cf
 msgid "Creating Custom Markers"
-msgstr "Skapa egna markörer"
+msgstr "Skapa anpassade markörer"
 
 #: ../../source/custom-markers.rst:5 e11ea630010945caae454593813486c2
 msgid ""
@@ -34,8 +34,8 @@ msgid ""
 msgstr ""
 "Precis som du kan skapa egna mönster kan du också skapa egna markörer. "
 "För att göra det, rita den markör du tänker dig och gör den sedan "
-"tillgänglig för användning genom att göra :menuselection:`Object --> "
-"Object to Marker`."
+"tillgänglig för användning genom att göra :menuselection:`Objekt --> "
+"Objekt till markör`."
 
 #: ../../source/custom-markers.rst:9 81e2e25b50304de481716bf3de776433
 msgid ""
@@ -43,7 +43,8 @@ msgid ""
 "drop-down menu (:guilabel:`Fill and Stroke` dialog, third tab)."
 msgstr ""
 "Din markör är nu tillgänglig högst upp i listan över markörer i "
-"rullgardinsmenyn (:guilabel:`Fyll and Stroke` dialog, tredje fliken)."
+"rullgardinsmenyns dialog (:guilabel:`Fyllning och streck`, tredje "
+"fliken)."
 
 #: ../../source/custom-markers.rst:12 f4db03ef4056482da77de7eb01f40110
 msgid "Markers and path"
@@ -54,7 +55,7 @@ msgid ""
 "We have drawn our markers and our path. For the ends, in this case we "
 "want to have two mirrored markers."
 msgstr ""
-"Vi har ritat våra markörer och vår väg. För ändarna vill vi i det här "
+"Vi har ritat våra markörer och vår slinga. För ändarna vill vi i det här "
 "fallet ha två spegelvända markörer."
 
 #: ../../source/custom-markers.rst:18 eee04354f2ab4b4ea48ced3a947069b8
@@ -71,7 +72,7 @@ msgstr ""
 
 #: ../../source/custom-markers.rst:24 53be95acb42a4eeba49d1b6bf84b174c
 msgid "Markers applied"
-msgstr "Markörer applicerade"
+msgstr "Markörer tillämpade"
 
 #: ../../source/custom-markers.rst:28 afaca822c1a245e2bcd46ddbdc4772b9
 msgid ""
@@ -81,7 +82,8 @@ msgid ""
 "the objects that were converted to a marker. It also changes with the "
 "stroke width of the path."
 msgstr ""
-"I dialogrutan :guilabel:`Fill and Stroke` har vi valt de nya markörerna "
-"för början, slutet och mitten av vår slinga. De är placerade på slingans "
-"noder. Markörernas storlek beror på storleken på de objekt som "
-"konverterades till en markör. Den ändras också med slingans streckbredd."
+"I dialogrutan :guilabel:`Fyllning och streck` har vi valt de nya "
+"markörerna för början, slutet och mitten av vår slinga. De är placerade "
+"på slingans noder. Markörernas storlek beror på storleken på de objekt "
+"som konverterades till en markör. Den ändras också med slingans "
+"streckbredd."
