--- a/Inkscape/Inkscapes nybörjarguide/find-help.po
+++ b/Inkscape/Inkscapes nybörjarguide/find-help.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: Inkscape Beginners' Guide 1.3\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2025-05-13 20:11+0200\n"
-"PO-Revision-Date: 2025-05-15 18:52+0200\n"
+"PO-Revision-Date: 2025-07-27 19:38+0200\n"
 "Last-Translator: Daniel Nylander <github@danielnylander.se>\n"
 "Language-Team: sv <LL@li.org>\n"
 "Language: sv\n"
@@ -46,12 +46,13 @@ msgid ""
 "textbook on it. There is also a series of `tutorials <https://"
 "inkscape.org/learn/tutorials/>`__ on Inkscape's homepage."
 msgstr ""
-"Om du vill läsa om mer avancerade funktioner i Inkscape, den gratis "
-"onlineboken `Inkscape: Guide to a Vector Drawing Program av Tavmjong Bah "
-"<http://tavmjong.free.fr/INKSCAPE/>`__ (täcker för närvarande Inkscape "
-"0.92, med vissa delar som fortfarande dokumenterar äldre versioner) är "
-"standardläroboken om det. Det finns också en serie `handledningar "
-"<https://inkscape.org/learn/tutorials/>`__ på Inkscapes hemsida."
+"Om du vill läsa om mer avancerade funktioner i Inkscape, den "
+"kostnadsfria onlineboken `Inkscape: Guide to a Vector Drawing Program av "
+"Tavmjong Bah <http://tavmjong.free.fr/INKSCAPE/>`__ (täcker för "
+"närvarande Inkscape 0.92, med vissa delar som fortfarande dokumenterar "
+"äldre versioner) är standardläroboken om det. Det finns också en serie "
+"`handledningar <https://inkscape.org/learn/tutorials/>`__ på Inkscapes "
+"webbplats."
 
 #: ../../source/find-help.rst:14 ba202ba9a319496ba30053bf3f937fa5
 msgid ""
