--- a/Inkscape/Inkscapes nybörjarguide/index.po
+++ b/Inkscape/Inkscapes nybörjarguide/index.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: Inkscape Beginners' Guide 1.3\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2025-05-13 20:11+0200\n"
-"PO-Revision-Date: 2025-05-15 19:03+0200\n"
+"PO-Revision-Date: 2025-07-27 19:34+0200\n"
 "Last-Translator: Daniel Nylander <github@danielnylander.se>\n"
 "Language-Team: sv <LL@li.org>\n"
 "Language: sv\n"
@@ -23,7 +23,7 @@ msgstr ""
 
 #: ../../source/index.rst:32
 msgid "Table of Contents"
-msgstr "Innehåll"
+msgstr "Innehållsförteckning"
 
 #: ../../source/index.rst:39
 msgid "Introduction"
@@ -35,7 +35,7 @@ msgstr "Installera Inkscape"
 
 #: ../../source/index.rst:57
 msgid "Finding Your Way Around"
-msgstr "Att hitta rätt i världen"
+msgstr "Hitta rätt"
 
 #: ../../source/index.rst:66
 msgid "First Steps"
@@ -79,7 +79,7 @@ msgstr "Välkommen till Inkscapes nybörjarguide!"
 
 #: ../../source/index.rst:9 27febb6b17da46bf8877808caa6da888
 msgid "Hi! Are you new to `Inkscape <https://inkscape.org>`__?"
-msgstr "Hej! Är du nybörjare på `Inkscape <https://inkscape.org>`__?"
+msgstr "Hej! Är du nybörjare av `Inkscape <https://inkscape.org>`__?"
 
 #: ../../source/index.rst:11 a48bd7ad75624da680a87a71213d9486
 msgid ""
@@ -87,7 +87,7 @@ msgid ""
 "this **free, community-created Beginners' Guide**:"
 msgstr ""
 "Lär dig mer om Inkscape, en vektorgrafikredigerare med öppen källkod, i "
-"denna **gratis, community-skapade nybörjarguide**:"
+"denna **gratis, gemenskapsskapade nybörjarguide**:"
 
 #: ../../source/index.rst:13 de03554776be498b9221f52cdecd6f07
 msgid "`Read Online`"
