--- a/Inkscape/Inkscapes nybörjarguide/installing-on-linux.po
+++ b/Inkscape/Inkscapes nybörjarguide/installing-on-linux.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: Inkscape Beginners' Guide 1.3\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2025-05-13 20:11+0200\n"
-"PO-Revision-Date: 2025-05-15 19:18+0200\n"
+"PO-Revision-Date: 2025-07-27 20:01+0200\n"
 "Last-Translator: Daniel Nylander <github@danielnylander.se>\n"
 "Language-Team: sv <LL@li.org>\n"
 "Language: sv\n"
@@ -35,7 +35,7 @@ msgstr ""
 
 #: ../../source/installing-on-linux.rst:8 4a468724c84a48ac894ef7daa1bd5774
 msgid "Preinstalled"
-msgstr "Förinstallerad"
+msgstr "Förinstallerat"
 
 #: ../../source/installing-on-linux.rst:9 3d2ecbb53cc1422a82d60f17f5fb89b7
 msgid ""
@@ -47,7 +47,7 @@ msgstr ""
 
 #: ../../source/installing-on-linux.rst:12 d43dcf62d0f24d0d8e27c520005e61de
 msgid "From your distro's app store"
-msgstr "Från din distros appbutik"
+msgstr "Från din distributions appbutik"
 
 #: ../../source/installing-on-linux.rst:14 1723e47b3ff3431ba952dc2c77e4825e
 msgid ""
@@ -101,4 +101,4 @@ msgstr ":term:`Snap`"
 
 #: ../../source/installing-on-linux.rst:27 39ab9f20ef864537b55f2dd16b64c7f2
 msgid "building Inkscape yourself from the :term:`source code <Source Code>`"
-msgstr "bygga Inkscape själv från :term:`källkoden <Source Code>`"
+msgstr "bygg Inkscape själv från :term:`källkoden <Source Code>`"
