--- a/Inkscape/Inkscapes nybörjarguide/markers.po
+++ b/Inkscape/Inkscapes nybörjarguide/markers.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: Inkscape Beginners' Guide 1.3\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2025-05-13 20:11+0200\n"
-"PO-Revision-Date: 2025-05-15 17:13+0200\n"
+"PO-Revision-Date: 2025-07-27 19:40+0200\n"
 "Last-Translator: Daniel Nylander <github@danielnylander.se>\n"
 "Language-Team: sv <LL@li.org>\n"
 "Language: sv\n"
@@ -34,33 +34,31 @@ msgid ""
 msgstr ""
 "Markörer är små symboler som kan läggas till i början av en slinga, i "
 "slutet av den och på linjen däremellan. De kommer att placeras på slingans "
-"stroke. Detta är mycket användbart när du snabbt vill skapa pilar och "
+"streck. Detta är mycket användbart när du snabbt vill skapa pilar och "
 "diagram!"
 
 #: ../../source/markers.rst:10 e83c6f19e1d64404993ccda7ba0619d4
 msgid ""
-"Markers will be located exactly on the nodes of the path. The start "
-"marker will appear on the first node of the path, the middle markers on "
-"each node along the path, and the end marker on the last node of the "
-"path."
+"Markers will be located exactly on the nodes of the path. The start marker "
+"will appear on the first node of the path, the middle markers on each node "
+"along the path, and the end marker on the last node of the path."
 msgstr ""
 "Markörerna kommer att placeras exakt på slingans noder. Startmarkören "
-"kommer att visas på slingans första nod, mittmarkörerna på varje nod "
-"längs slingan och slutmarkören på slingans sista nod."
+"kommer att visas på slingans första nod, mittmarkörerna på varje nod längs "
+"slingan och slutmarkören på slingans sista nod."
 
 #: ../../source/markers.rst:15 4bb8e90e415b401b9bbe1db03a8bee44
 msgid ""
-"Inkscape offers lots of different markers for you to choose from. You "
-"can look at them in the :guilabel:`Stroke Style` tab of "
-"the :guilabel:`Fill and Stroke` dialog, in the row "
-"labelled :guilabel:`Markers`. The left-most drop-down menu is for the "
-"start marker, the one in the middle for the middle markers, and the "
-"right-most one for the end markers."
+"Inkscape offers lots of different markers for you to choose from. You can "
+"look at them in the :guilabel:`Stroke Style` tab of the :guilabel:`Fill "
+"and Stroke` dialog, in the row labelled :guilabel:`Markers`. The left-most "
+"drop-down menu is for the start marker, the one in the middle for the "
+"middle markers, and the right-most one for the end markers."
 msgstr ""
 "Inkscape erbjuder många olika markörer som du kan välja mellan. Du kan "
-"titta på dem på fliken :guilabel:`Stroke Style` i "
-"dialogrutan :guilabel:`Fill and Stroke`, i raden med "
-"namnet :guilabel:`Markers`. Rullgardinsmenyn längst till vänster gäller "
+"titta på dem på fliken :guilabel:`Streckstil` i "
+"dialogrutan :guilabel:`Fyllning och streck`, i raden med "
+"namnet :guilabel:`Markörer`. Rullgardinsmenyn längst till vänster gäller "
 "för startmarkören, den i mitten för mittmarkörerna och den längst till "
 "höger för slutmarkörerna."
 
@@ -71,10 +69,10 @@ msgid ""
 "extension :menuselection:`Extensions --> Modify Path --> Color Markers` "
 "will do this for you."
 msgstr ""
-"Markörer tar automatiskt på sig fyllning och slag av den slinga de är "
+"Markörer tar automatiskt på sig fyllning och streck av den slinga de är "
 "kopplade till. I äldre versioner av Inkscape gör "
-"tillägget :menuselection:`Extensions --> Modify Path --> Color Markers` "
-"detta åt dig."
+"tillägget :menuselection:`Tillägg --> Ändra slinga --> Färgmarkörer` detta "
+"åt dig."
 
 #: ../../source/markers.rst:26 2484e00b141e46f297a68e67bdf0559f
 msgid ""
