--- a/Inkscape/Inkscapes nybörjarguide/professional-software.po
+++ b/Inkscape/Inkscapes nybörjarguide/professional-software.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: Inkscape Beginners' Guide 1.3\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2025-05-13 20:11+0200\n"
-"PO-Revision-Date: 2025-05-15 19:26+0200\n"
+"PO-Revision-Date: 2025-07-27 20:08+0200\n"
 "Last-Translator: Daniel Nylander <github@danielnylander.se>\n"
 "Language-Team: sv <LL@li.org>\n"
 "Language: sv\n"
@@ -70,7 +70,7 @@ msgstr ""
 "programmet är helt och hållet ditt, och du är fri att distribuera, dela "
 "med dig av det, sälja det hur du vill - eller behålla det för dig själv! "
 "Förutom om du har använt någon annans verk som grund för ditt eget, i "
-"vilket fall denna person också är medförfattare till verket."
+"vilket fall denna person också är upphovsperson till verket."
 
 #: ../../source/professional-software.rst:22 8ae964e9778a44eeb211fe004f576616
 msgid "How much does it cost?"
