--- a/Inkscape/Inkscapes nybörjarguide/strokes.po
+++ b/Inkscape/Inkscapes nybörjarguide/strokes.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: Inkscape Beginners' Guide 1.3\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2025-05-13 20:11+0200\n"
-"PO-Revision-Date: 2025-05-13 20:34+0200\n"
+"PO-Revision-Date: 2025-07-27 20:22+0200\n"
 "Last-Translator: Daniel Nylander <github@danielnylander.se>\n"
 "Language-Team: sv <LL@li.org>\n"
 "Language: sv\n"
@@ -31,9 +31,9 @@ msgid ""
 "independently from its fill. Two of the tabs of the :guilabel:`Fill and "
 "Stroke` dialog are dedicated to styling strokes."
 msgstr ""
-"Ett objekts :term:`stroke <Stroke>`, dess kontur, hanteras oberoende av "
-"dess fyllning. Två av flikarna i dialogrutan :guilabel:`Fill and Stroke` "
-"är avsedda för styling av streck."
+"Ett objekts :term:`streck <Stroke>`, dess kontur, hanteras oberoende av "
+"dess fyllning. Två av flikarna i dialogrutan :guilabel:`Fyllning och "
+"streck` är avsedda för styling av streck."
 
 #: ../../source/strokes.rst:8 b49c8073597c4ef08c7bc7723a7d2901
 msgid ""
@@ -42,10 +42,10 @@ msgid ""
 "paint can not only be a flat color, but also a radial or linear "
 "gradient, a pattern or even a gradient mesh."
 msgstr ""
-"Du kan tilldela en färg till en stroke. Detta fungerar på samma sätt som "
-"när du tilldelar en färg till fyllningen (men på fliken Stroke). Stroke-"
-"färgen kan inte bara vara en platt färg, utan också en radiell eller "
-"linjär gradient, ett mönster eller till och med ett gradientnät."
+"Du kan tilldela en färg till ett streck. Detta fungerar på samma sätt "
+"som när du tilldelar en färg till fyllningen (men på fliken Streck). "
+"Streckfärgen kan inte bara vara en platt färg, utan också en radiell "
+"eller linjär gradient, ett mönster eller till och med ett gradientnät."
 
 #: ../../source/strokes.rst:18 777d9d5b0e314381bb7d5e1c0ccc009b
 msgid ""
@@ -54,9 +54,10 @@ msgid ""
 "<Cap>` or select a dash pattern (simple stroke, various dash "
 "lengths,...)."
 msgstr ""
-"På fliken :guilabel:`Stroke Style` kan du ställa in bredden på strecket, "
-"formen på dess :term:`joins <Join type>` och :term:`end caps <Cap>` "
-"eller välja ett streckmönster (enkelt streck, olika strecklängder, ...)."
+"På fliken :guilabel:`Streckstil` kan du ställa in bredden på strecket, "
+"formen på dess :term:`sammanfogningar <Join type>` och :term:`ändavslut "
+"<Cap>` eller välja ett streckmönster (enkelt streck, olika "
+"strecklängder, ...)."
 
 #: ../../source/strokes.rst:22 eedf9e13ea7644fc85f3909ee7777dec
 msgid ""
@@ -74,9 +75,9 @@ msgid ""
 "shape of the stroke. The default values are fully sufficient in most "
 "cases."
 msgstr ""
-"Alternativen för :guilabel:`Join` och :guilabel:`Cap` ändrar något "
-"formen på strecket. Standardvärdena är fullt tillräckliga i de flesta "
-"fall."
+"Alternativen för :guilabel:`Sammanfoga` och :guilabel:`Ände` ändrar "
+"något formen på strecket. Standardvärdena är fullt tillräckliga i de "
+"flesta fall."
 
 #: ../../source/strokes.rst:29 b7b1429bb35b40de87e0a7459462b6ae
 msgid ""
@@ -85,8 +86,8 @@ msgid ""
 "stroke. The number field to the right allows you to shift the dash "
 "pattern to the desired location."
 msgstr ""
-"Rullgardinsmenyn :guilabel:`Dashes` ger tillgång till ett stort urval av "
-"olika streckstilar, som ger dig regelbundna streckmönster längs "
+"Rullgardinsmenyn :guilabel:`Bindestreck` ger tillgång till ett stort "
+"urval av olika streckstilar, som ger dig regelbundna streckmönster längs "
 "strecket. Sifferfältet till höger gör att du kan flytta streckmönstret "
 "till önskad plats."
 
@@ -96,9 +97,9 @@ msgid ""
 "for :guilabel:`Blur` and :guilabel:`Opacity` always apply to the object "
 "as a whole."
 msgstr ""
-"Det är omöjligt att använda oskärpa endast på ett objekts stroke. "
-"Alternativen för :guilabel:`Blur` och :guilabel:`Opacity` gäller alltid "
-"för objektet som helhet."
+"Det är omöjligt att använda oskärpa endast på ett objekts streck. "
+"Alternativen för :guilabel:`Oskärpa` och :guilabel:`Opacitet` gäller "
+"alltid för objektet som helhet."
 
 #: ../../source/strokes.rst:37 ebbe610c3b394cc1a6d960c9d616e46d
 msgid "Stroke: flat color"
@@ -106,7 +107,7 @@ msgstr "Streck: platt färg"
 
 #: ../../source/strokes.rst:41 df52350fea82478694ce6af792a9742d
 msgid "Black flat color on stroke"
-msgstr "Svart flat färg på streck"
+msgstr "Svart platt färg på streck"
 
 #: ../../source/strokes.rst:43 0afc9926bdfc4647ab906bec7ea06369
 msgid "Stroke: linear gradient"
@@ -138,4 +139,4 @@ msgstr "Streck: sammanfogningstyper"
 
 #: ../../source/strokes.rst:61 b198057c5ffd4d27b948e258ca5a98e8
 msgid "The 3 different types of line joins."
-msgstr "De 3 olika typerna av linjeförslingd."
+msgstr "De 3 olika typerna av linjesammanfogningar."
