--- a/Inkscape/Inkscapes nybörjarguide/text.po
+++ b/Inkscape/Inkscapes nybörjarguide/text.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: Inkscape Beginners' Guide 1.3\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2025-05-13 20:11+0200\n"
-"PO-Revision-Date: 2025-05-13 20:31+0200\n"
+"PO-Revision-Date: 2025-07-27 19:18+0200\n"
 "Last-Translator: Daniel Nylander <github@danielnylander.se>\n"
 "Language-Team: sv <LL@li.org>\n"
 "Language: sv\n"
@@ -29,23 +29,23 @@ msgstr "Text i Inkscape"
 msgid ""
 "There is one menu which is dedicated to everything related to **Text**, "
 "which makes it easier to add text to adverts or logos. The text can be "
-"added as a normal text, or in a frame for a :term:`auto-wrapped text "
-"<Flow Text>`."
+"added as a normal text, or in a frame for a :term:`auto-wrapped text <Flow "
+"Text>`."
 msgstr ""
 "Det finns en meny som är tillägnad allt som rör **Text**, vilket gör det "
-"enklare att lägga till text i annonser eller logotyper. Texten kan "
-"läggas till som en vanlig text, eller i en ram för en :term:`auto-"
-"wrapped text <Flow Text>`."
+"enklare att lägga till text i annonser eller logotyper. Texten kan läggas "
+"till som en vanlig text, eller i en ram för en :term:`auto-wrapped text "
+"<Flow Text>`."
 
 #: ../../source/text.rst:7 89ab891b5e454551b906cb2f03f70ec3
 msgid ""
-"At any time, the font, font size and color of the text can be changed. "
-"You can also make interesting modifications such as making a text follow "
-"the course of a path or flowing it into an irregularly-shaped frame."
+"At any time, the font, font size and color of the text can be changed. You "
+"can also make interesting modifications such as making a text follow the "
+"course of a path or flowing it into an irregularly-shaped frame."
 msgstr ""
-"Du kan när som helst ändra typsnitt, teckenstorlek och färg på "
-"texten. Du kan också göra intressanta ändringar som att få en text att "
-"följa en slinga eller att få den att flyta in i en oregelbundet formad ram."
+"Du kan när som helst ändra typsnitt, teckenstorlek och färg på texten. Du "
+"kan också göra intressanta ändringar som att få en text att följa en "
+"slinga eller att få den att flöda in i en oregelbundet formad ram."
 
 #: ../../source/text.rst:9 0547a9e5a2424d7dbb9b011f482737b2
 msgid ""
@@ -59,10 +59,9 @@ msgstr ""
 #: ../../source/text.rst:11 c9a6ca54ad884693ba36930226e3639a
 msgid ""
 "Typographers will appreciate the option to create :term:`SVG fonts <SVG "
-"Font>` with Inkscape. The dedicated dialog allows you to directly see "
-"the result, in a preview that updates as you type!"
+"Font>` with Inkscape. The dedicated dialog allows you to directly see the "
+"result, in a preview that updates as you type!"
 msgstr ""
-"Typografer kommer att uppskatta möjligheten att skapa :term:`SVG-"
-"typsnitt <SVG Font>` med Inkscape. Den dedikerade dialogrutan gör att "
-"du direkt kan se resultatet, i en förhandsgranskning som uppdateras "
-"medan du skriver!"
+"Typografer kommer att uppskatta möjligheten att skapa :term:`SVG-typsnitt "
+"<SVG Font>` med Inkscape. Den dedikerade dialogrutan gör att du direkt kan "
+"se resultatet, i en förhandsgranskning som uppdateras medan du skriver!"
