--- a/Inkscape/Inkscapes nybörjarguide/using-patterns.po
+++ b/Inkscape/Inkscapes nybörjarguide/using-patterns.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: Inkscape Beginners' Guide 1.3\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2025-05-13 20:11+0200\n"
-"PO-Revision-Date: 2025-05-13 20:21+0200\n"
+"PO-Revision-Date: 2025-07-27 19:16+0200\n"
 "Last-Translator: Daniel Nylander <github@danielnylander.se>\n"
 "Language-Team: sv <LL@li.org>\n"
 "Language: sv\n"
@@ -35,7 +35,7 @@ msgstr ""
 
 #: ../../source/using-patterns.rst:8 32698722a18d44aa9ba31754e57e792b
 msgid "select the object on the canvas"
-msgstr "välj objektet på målarduken"
+msgstr "välj objektet på duken"
 
 #: ../../source/using-patterns.rst:9 2de4b5e426704ddf82d850c891b1dc0e
 msgid ""
@@ -43,8 +43,8 @@ msgid ""
 "(or :guilabel:`Stroke paint`) tab, click on the icon for patterns |"
 "image0|"
 msgstr ""
-"öppna dialogrutan :guilabel:`Fyll and Stroke`, och på "
-"fliken :guilabel:`Fyll` (eller :guilabel:`Stroke paint`), klicka på "
+"öppna dialogrutan :guilabel:`Fyllning och streck`, och på "
+"fliken :guilabel:`Fyllning` (eller :guilabel:`Streckfärg`), klicka på "
 "ikonen för mönster |image0|"
 
 #: ../../source/using-patterns.rst:21 68d0278a5c0c4465a265a91b311539de
@@ -57,7 +57,7 @@ msgid ""
 "pattern from the list to apply it immediately to the object."
 msgstr ""
 "Du kommer då att se en rullgardinsmeny med många mönsternamn. Välj ett "
-"mönster från listan för att omedelbart applicera det på objektet."
+"mönster från listan för att omedelbart tillämpa det på objektet."
 
 #: ../../source/using-patterns.rst:14 c1676364b244487da52c6434eb36fbb3
 msgid "Polka dots pattern with pattern list"
@@ -68,5 +68,5 @@ msgid ""
 "Object with stock pattern 'Polka dots, medium' and a view of the list of "
 "available patterns"
 msgstr ""
-"Objekt med lagermönster 'Polkagrisar, medium' och en vy över listan med "
-"tillgängliga mönster"
+"Objekt med standardmönstret 'Polkaprickar, medium' och en vy över listan "
+"med tillgängliga mönster"
