--- a/Inkscape/Inkscapes nybörjarguide/ways-drawing.po
+++ b/Inkscape/Inkscapes nybörjarguide/ways-drawing.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: Inkscape Beginners' Guide 1.3\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2025-05-13 20:11+0200\n"
-"PO-Revision-Date: 2025-05-16 08:44+0200\n"
+"PO-Revision-Date: 2025-07-27 19:32+0200\n"
 "Last-Translator: Daniel Nylander <github@danielnylander.se>\n"
 "Language-Team: sv <LL@li.org>\n"
 "Language: sv\n"
@@ -48,7 +48,7 @@ msgid ""
 "tracing engine"
 msgstr ""
 "utgå från ett foto, en skannad bild eller annan rastergrafik med hjälp "
-"av en spårningsmotor"
+"av en kalkeringsmotor"
 
 #: ../../source/ways-drawing.rst:10 dcee09e27c724319a90b7a03b34e2f42
 msgid ""
