--- a/Inkscape/Inkscapes nybörjarguide/custom-keyboard-shortcuts.po
+++ b/Inkscape/Inkscapes nybörjarguide/custom-keyboard-shortcuts.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: Inkscape Beginners' Guide 1.3\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2025-05-13 20:11+0200\n"
-"PO-Revision-Date: 2025-05-13 20:25+0200\n"
+"PO-Revision-Date: 2025-07-27 20:11+0200\n"
 "Last-Translator: Daniel Nylander <github@danielnylander.se>\n"
 "Language-Team: sv <LL@li.org>\n"
 "Language: sv\n"
@@ -24,7 +24,7 @@ msgstr ""
 #: ../../source/custom-keyboard-shortcuts.rst:3
 #: ecb298bfc58c419bb7fbcea4aa531bc0
 msgid "Customizing Keyboard Shortcuts"
-msgstr "Anpassa kortkommandon på tangentbordet"
+msgstr "Anpassning av kortkommandon"
 
 #: ../../source/custom-keyboard-shortcuts.rst:5
 #: 3584ba8de90c490da6df3844307da550
@@ -42,7 +42,7 @@ msgid ""
 "the shortcuts the same, so you don't need to learn so many new ones"
 msgstr ""
 "du har använt ett annat grafikprogram tidigare och vill behålla samma "
-"genvägar så att du inte behöver lära dig så många nya"
+"kortkommandon så att du inte behöver lära dig så många nya"
 
 #: ../../source/custom-keyboard-shortcuts.rst:9
 #: bbe7d510d7e14ed3b911623c04232c56
@@ -66,8 +66,8 @@ msgid ""
 "you want to assign a shortcut to a functionality in Inkscape that doesn't "
 "have a shortcut by default"
 msgstr ""
-"du vill tilldela en genväg till en funktion i Inkscape som inte har någon "
-"genväg som standard"
+"du vill tilldela ett kortkommando till en funktion i Inkscape som inte har "
+"något kortkommando som standard"
 
 #: ../../source/custom-keyboard-shortcuts.rst:13
 #: e1775db003184da3a04a7994171833b2
@@ -75,8 +75,8 @@ msgid ""
 "You can change the shortcuts at :menuselection:`Edit --> Preferences --> "
 "Interface --> Keyboard`."
 msgstr ""
-"Du kan ändra genvägarna på :menuselection:`Edit --> Preferences --> "
-"Interface --> Keyboard`."
+"Du kan ändra kortkommandon på :menuselection:`Redigera --> Inställningar --"
+"> Gränssnitt --> Tangentbord`."
 
 #: ../../source/custom-keyboard-shortcuts.rst:15
 #: 60b4286c484542c7a78dba1e89853f68
@@ -90,7 +90,7 @@ msgstr ""
 #: ../../source/custom-keyboard-shortcuts.rst:17
 #: 5ea03a4849a44c6883efafc1bfdc6aa3
 msgid "Choosing a key map"
-msgstr "Att välja en tangentmappning"
+msgstr "Välja en tangentmappning"
 
 #: ../../source/custom-keyboard-shortcuts.rst:21
 #: da0b703418014570b25adc8d953a8fef
@@ -101,17 +101,17 @@ msgstr ""
 #: ../../source/custom-keyboard-shortcuts.rst:23
 #: 58322acad5a8404b963210012c44d572
 msgid "In addition to this, you can overwrite any shortcut by:"
-msgstr "Utöver detta kan du skriva över alla genvägar med:"
+msgstr "Utöver detta kan du skriva över alla kortkommandon genom att:"
 
 #: ../../source/custom-keyboard-shortcuts.rst:25
 #: 9ebc87b55e4d4a6ebb2b8b41d8512ffe
 msgid "selecting it from the list;"
-msgstr "genom att välja den från listan;"
+msgstr "genom att välja det från listan;"
 
 #: ../../source/custom-keyboard-shortcuts.rst:26
 #: 527a664ac201407faa2cde94b21bef96
 msgid "clicking on the field in the :guilabel:`Shortcut` column;"
-msgstr "genom att klicka på fältet i kolumnen :guilabel:`Shortcut`;"
+msgstr "genom att klicka på fältet i kolumnen :guilabel:`Genväg`;"
 
 #: ../../source/custom-keyboard-shortcuts.rst:27
 #: dd3076af059442e0a818d9e7e194c680
@@ -121,15 +121,15 @@ msgid ""
 "value."
 msgstr ""
 "trycka på den nya genvägen, när det står :guilabel:`Ny accelerator` i det "
-"fältet. Om du trycker på :kbd:`Backspace` återställs genvägen till sitt "
+"fältet. Om du trycker på :kbd:`Backsteg` återställs genvägen till sitt "
 "standardvärde."
 
 #: ../../source/custom-keyboard-shortcuts.rst:30
 #: 1fa68821a0de4847bf4ee6a8442b0c32
 msgid "Setting a new keyboard shortcut"
-msgstr "Ange en ny kortkommando på tangentbordet"
+msgstr "Ställa in ett nytt kortkommando"
 
 #: ../../source/custom-keyboard-shortcuts.rst:34
 #: ce8b423484c840e4985e3896f070e452
 msgid "When it says 'New accelerator', press the new shortcut."
-msgstr "När det står \"New accelerator\" trycker du på den nya genvägen."
+msgstr "När det står \"Ny accelerator\" trycker du på den nya genvägen."
