--- a/Inkscape/Inkscapes nybörjarguide/objects-to-paths.po
+++ b/Inkscape/Inkscapes nybörjarguide/objects-to-paths.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: Inkscape Beginners' Guide 1.3\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2025-05-13 20:11+0200\n"
-"PO-Revision-Date: 2025-05-13 20:23+0200\n"
+"PO-Revision-Date: 2025-07-27 19:19+0200\n"
 "Last-Translator: Daniel Nylander <github@danielnylander.se>\n"
 "Language-Team: sv <LL@li.org>\n"
 "Language: sv\n"
@@ -28,14 +28,14 @@ msgstr "Redigera noder på en geometrisk form"
 #: ../../source/objects-to-paths.rst:5 b23e8434e85049a3a7d749d0523708f2
 msgid ""
 "There are multiple ways to modify an object in your drawing. If the "
-"object is a rectangle, an ellipse, a star or a spiral, i.e. a "
-"geometrical shape drawn with one of the shape tools, then this object is "
-"a **shape**, and not a **path**."
+"object is a rectangle, an ellipse, a star or a spiral, i.e. a geometrical "
+"shape drawn with one of the shape tools, then this object is a **shape**, "
+"and not a **path**."
 msgstr ""
 "Det finns flera sätt att modifiera ett objekt i din ritning. Om objektet "
 "är en rektangel, en ellips, en stjärna eller en spiral, dvs. en "
 "geometrisk form som ritats med något av formverktygen, är objektet en "
-"**form** och inte en **väg**."
+"**form** och inte en **slinga**."
 
 #: ../../source/objects-to-paths.rst:9 1bf0495d1ed44daf98ba0c1193b01979
 msgid ""
@@ -52,7 +52,7 @@ msgid ""
 "However, **shapes can be converted into paths**, so the path tools can "
 "then be used with them."
 msgstr ""
-"Men **former kan konverteras till slingor**, så att slingverktygen kan "
+"Dock kan **former konverteras till slingor**, så att slingverktygen kan "
 "användas med dem."
 
 #: ../../source/objects-to-paths.rst:15 75c1df59594a4acfb2a6515c11b3eacc
@@ -61,7 +61,7 @@ msgstr "För att konvertera en form till en slinga:"
 
 #: ../../source/objects-to-paths.rst:17 0087f206a257462fbc84feccb756b3f0
 msgid "Select the shape with the Selector tool."
-msgstr "Markera formen med Selector-verktyget."
+msgstr "Markera formen med Väljare-verktyget."
 
 #: ../../source/objects-to-paths.rst:18 81cc4e7e1d274db28a6d0762a5c1b37b
 msgid "In the menu, select :menuselection:`Path --> Object to path`."
