--- a/Inkscape/Inkscapes nybörjarguide/ordering-markers-stroke-and-fill.po
+++ b/Inkscape/Inkscapes nybörjarguide/ordering-markers-stroke-and-fill.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: Inkscape Beginners' Guide 1.3\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2025-05-13 20:11+0200\n"
-"PO-Revision-Date: 2025-05-16 09:15+0200\n"
+"PO-Revision-Date: 2025-07-27 20:05+0200\n"
 "Last-Translator: Daniel Nylander <github@danielnylander.se>\n"
 "Language-Team: sv <LL@li.org>\n"
 "Language: sv\n"
@@ -34,8 +34,8 @@ msgid ""
 "overlapping with the fill, the other half is on the outside. Markers, "
 "too, are centered on the path."
 msgstr ""
-"Ett objekts slinga bestämmer dess form. :term:`stroke <Stroke>` är "
-"centrerad på slingan, ena halvan på insidan av slingan, överlappande med "
+"Ett objekts slinga bestämmer dess form. :term:`Streck <Stroke>` är "
+"centrerat på slingan, ena halvan på insidan av slingan, överlappande med "
 "fyllningen, den andra halvan på utsidan. Även markörer är centrerade på "
 "slingan."
 
@@ -47,10 +47,10 @@ msgid ""
 "object will be drawn. This way, you can place markers (and / or strokes) "
 "above or below the fill."
 msgstr ""
-"I avsnittet :guilabel:`Order` i dialogrutan :guilabel:`Fill and Stroke` "
-"kan du välja i vilken ordning dessa olika delar av ett objekt ska ritas. "
-"På så sätt kan du placera markörer (och / eller streck) ovanför eller "
-"under fyllningen."
+"I avsnittet :guilabel:`Ordning` i dialogrutan :guilabel:`Fyllning och "
+"streck` kan du välja i vilken ordning dessa olika delar av ett objekt "
+"ska ritas. På så sätt kan du placera markörer (och / eller streck) "
+"ovanför eller under fyllningen."
 
 #: ../../source/ordering-markers-stroke-and-fill.rst:14
 #: c4db5d843aae44c4acd67376143e7b0d
@@ -60,17 +60,17 @@ msgstr "Ikoner för markörordning"
 #: ../../source/ordering-markers-stroke-and-fill.rst:18
 #: 845c4a8bf97a4c38b78e0c4f6003698b
 msgid "The available marker orders’ icons"
-msgstr "Ikoner för tillgänglig markörordning"
+msgstr "Tillgängliga ikoner för markörordning"
 
 #: ../../source/ordering-markers-stroke-and-fill.rst:20
 #: 59df5ba0cf4d4b6785162f4cac6e5d05
 msgid "Marker order: markers > stroke > fill"
-msgstr "Markörordning: markörer > stroke > fill"
+msgstr "Markörordning: markörer > streck > fyllning"
 
 #: ../../source/ordering-markers-stroke-and-fill.rst:24
 #: 7c323e1929684131887cd64635a1ea21
 msgid "[top] markers > stroke > fill [bottom]"
-msgstr "[topp] markörer > stroke > fill [botten]"
+msgstr "[överst] markörer > streck > fyllning [botten]"
 
 #: ../../source/ordering-markers-stroke-and-fill.rst:26
 #: 1610b3319efa45dcbfb194a1af75267f
@@ -80,44 +80,44 @@ msgstr "Markörordning: markörer > fyllning > streck"
 #: ../../source/ordering-markers-stroke-and-fill.rst:30
 #: 0ec7a0b65bba4c8c9de00758215a9855
 msgid "[top] markers > fill > stroke [bottom]"
-msgstr "[topp] markörer > fyllning > stroke [botten]"
+msgstr "[överst] markörer > fyllning > streck [botten]"
 
 #: ../../source/ordering-markers-stroke-and-fill.rst:32
 #: f2f22255977f48c290dfc9ab0e739425
 msgid "Marker order: stroke > marker > fill"
-msgstr "Markörordning: stroke > markör > fyllning"
+msgstr "Markörordning: streck > markör > fyllning"
 
 #: ../../source/ordering-markers-stroke-and-fill.rst:36
 #: f20768d4dbb04ea29ac0ac223c2481f7
 msgid "[top] stroke > marker > fill [bottom]"
-msgstr "[överst] stroke > markör > fyllning [nederst]"
+msgstr "[överst] streck > markör > fyllning [nederst]"
 
 #: ../../source/ordering-markers-stroke-and-fill.rst:38
 #: 5a382526fada4c0382903cff1a018b37
 msgid "Marker order: stroke > fill > markers"
-msgstr "Markörordning: stroke > fill > markers"
+msgstr "Markörordning: streck > fyllning > markörer"
 
 #: ../../source/ordering-markers-stroke-and-fill.rst:42
 #: 4dfd152eed3d4622bf03e74eaa0b297d
 msgid "[top] stroke > fill > markers [bottom]"
-msgstr "[överst] stroke > fill > markers [nederst]"
+msgstr "[överst] streck > fyllning > markörer [nederst]"
 
 #: ../../source/ordering-markers-stroke-and-fill.rst:44
 #: ad8f62abe46c4784a533c48b2ea6c8d7
 msgid "Marker order: fill > markers > stroke"
-msgstr "Markörordning: fyllning > markörer > stroke"
+msgstr "Markörordning: fyllning > markörer > streck"
 
 #: ../../source/ordering-markers-stroke-and-fill.rst:48
 #: f005736be88d48f487d42987e58906ad
 msgid "[top] fill > markers > stroke [bottom]"
-msgstr "[överst] fyllning > markörer > stroke [nederst]"
+msgstr "[överst] fyllning > markörer > streck [nederst]"
 
 #: ../../source/ordering-markers-stroke-and-fill.rst:50
 #: 00e5472cf04445f6a8f87cb4073e796f
 msgid "Marker order: stroke > fill > marker"
-msgstr "Markörordning: stroke > fyllning > markör"
+msgstr "Markörordning: streck > fyllning > markör"
 
 #: ../../source/ordering-markers-stroke-and-fill.rst:54
 #: 9a4be0132dea4bcf996f2885ab7ea568
 msgid "[top] stroke > fill > marker [bottom]"
-msgstr "[topp] stroke > fyllning > markör [botten]"
+msgstr "[överst] streck > fyllning > markör [botten]"
