--- a/Inkscape/Inkscapes nybörjarguide/saving.po
+++ b/Inkscape/Inkscapes nybörjarguide/saving.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: Inkscape Beginners' Guide 1.3\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2025-05-13 20:11+0200\n"
-"PO-Revision-Date: 2025-05-15 17:23+0200\n"
+"PO-Revision-Date: 2025-07-27 20:00+0200\n"
 "Last-Translator: Daniel Nylander <github@danielnylander.se>\n"
 "Language-Team: sv <LL@li.org>\n"
 "Language: sv\n"
@@ -34,12 +34,12 @@ msgid ""
 "first save your drawing, give your file a name of your choice, and "
 "select one of these extensions:"
 msgstr ""
-"Inkscape är en stabil programvara. Vissa olyckliga handlingar kan dock "
+"Inkscape är en stabil programvara. Vissa olyckliga åtgärder kan dock "
 "leda till en krasch. Det bästa sättet att förhindra att detta orsakar "
 "problem är att regelbundet spara din ritning. Av denna anledning bör "
 "kortkommandot :kbd:`Ctrl` + :kbd:`S` användas ofta. När du sparar din "
-"ritning för första gången, ge filen ett valfritt namn och välj ett av "
-"dessa tillägg:"
+"ritning för första gången, ge filen ett valfritt namn och välj en av "
+"dessa filändelser:"
 
 #: ../../source/saving.rst:7 112e71670a6c47ef8b3a3dbf4fb3ba3d
 msgid ".svg (Inkscape SVG)"
@@ -63,7 +63,7 @@ msgid ""
 "but use SVG, e.g. when they view a web page that uses a picture that you "
 "created"
 msgstr ""
-"för att dela din teckning med andra personer som kanske inte använder "
+"för att dela din ritning med andra personer som kanske inte använder "
 "Inkscape, men som använder SVG, t.ex. när de tittar på en webbsida som "
 "använder en bild som du har skapat"
 
@@ -77,7 +77,7 @@ msgstr "komprimerad för att spara utrymme på din hårddisk"
 
 #: ../../source/saving.rst:18 be2f4444a1e64cfeae128b9ee558cd59
 msgid "Activating Autosave prevents loss of work"
-msgstr "Aktivering av Autosave förhindrar förlust av arbete"
+msgstr "Aktivering av automatisk sparning förhindrar förlust av arbete"
 
 #: ../../source/saving.rst:20 4849a2ce4b1d4511b3561a075de87e76
 msgid ""
@@ -92,6 +92,7 @@ msgstr ""
 "Om Inkscape oväntat stängs skapas i de flesta fall en säkerhetskopia som "
 "finns tillgänglig på en plats som anges i ett dialogfönster. Filnamnet "
 "består av originalfilens namn med tid och datum för kraschen. Det "
-"rekommenderas att du (förutom att spara ofta) aktiverar "
-"Inkscapes :guilabel:`Autosave`-funktion, som du hittar "
-"i :menuselection:`Edit --> Preferences --> Input/Output --> Autosave`."
+"rekommenderas att du (förutom att spara ofta) aktiverar Inkscapes "
+"funktion :guilabel:`Spara automatiskt`, som du hittar "
+"i :menuselection:`Redigera --> Inställningar --> In-/utmatning --> Spara "
+"automatiskt`."
