--- a/Inkscape/Inkscapes nybörjarguide/selector-tool.po
+++ b/Inkscape/Inkscapes nybörjarguide/selector-tool.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: Inkscape Beginners' Guide 1.3\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2025-05-13 20:11+0200\n"
-"PO-Revision-Date: 2025-05-16 09:14+0200\n"
+"PO-Revision-Date: 2025-07-27 20:45+0200\n"
 "Last-Translator: Daniel Nylander <github@danielnylander.se>\n"
 "Language-Team: sv <LL@li.org>\n"
 "Language: sv\n"
@@ -23,7 +23,7 @@ msgstr ""
 
 #: ../../source/selector-tool.rst:3 5c7d53d6fd6546cb84011bd80cb503ac
 msgid "The Selector Tool"
-msgstr "Verktyget Väljare"
+msgstr "Väljare-verktyget"
 
 #: ../../source/selector-tool.rst:5 894d275e54d34995b4f84c6352ffbad5
 msgid "|Icon for Selector| :kbd:`F1` or :kbd:`S`"
@@ -82,7 +82,7 @@ msgid ""
 "Drag to move the selection. Transformations (such as moving, scaling, "
 "rotating) are easy thanks to the two-way arrows."
 msgstr ""
-"Dra för att flytta markeringen. Transformationer (t.ex. flytta, skala, "
+"Dra för att flytta markeringen. Transformeringar (t.ex. flytta, skala, "
 "rotera) är enkla tack vare tvåvägspilarna."
 
 #: ../../source/selector-tool.rst:28 ee33c759c61947faa1b2339cce1b51f2
@@ -134,7 +134,7 @@ msgstr "För att rotera ett objekt:"
 
 #: ../../source/selector-tool.rst:47 cc40bdde5bf6453ab56c47078834830b
 msgid "grab a curved two-way arrow in any corner;"
-msgstr "ta en böjd dubbelriktad pil i vilket hörn som helst;"
+msgstr "ta tag i en böjd dubbelriktad pil i vilket hörn som helst;"
 
 #: ../../source/selector-tool.rst:48 e41dcaf163ee496095b1434fb3ab460a
 msgid ""
@@ -163,8 +163,8 @@ msgid ""
 "In some cases, you want to edit more than one object at once. So the "
 "Select tool can select more than one object at once."
 msgstr ""
-"I vissa fall vill du redigera mer än ett objekt på en gång. Då kan Välj-"
-"verktyget välja mer än ett objekt samtidigt."
+"I vissa fall vill du redigera mer än ett objekt på en gång. Då kan "
+"Väljare-verktyget välja fler än ett objekt samtidigt."
 
 #: ../../source/selector-tool.rst:61 f71b3326da634cbd8fc814b07b6a5e6c
 msgid "To select more than one object, there are mainly two ways:"
@@ -175,7 +175,7 @@ msgid ""
 "click the first object, then hold :kbd:`Shift` while clicking each "
 "additional object once;"
 msgstr ""
-"klicka på det första objektet och håll sedan inne :kbd:`Shift` medan du "
+"klicka på det första objektet och håll sedan inne :kbd:`Skift` medan du "
 "klickar en gång på varje ytterligare objekt;"
 
 #: ../../source/selector-tool.rst:65 84baa7d939af44fb8c5160864d55d9ed
@@ -196,9 +196,9 @@ msgid ""
 "box), while the two-way arrows for transformation are placed around the "
 "entire selection (one or more than one object)."
 msgstr ""
-"Varje markerat objekt ramas in med en streckad linje (den s.k. bounding "
-"boxen), medan tvåvägspilarna för transformation placeras runt hela "
-"markeringen (ett eller flera objekt)."
+"Varje markerat objekt ramas in med en streckad linje (den s.k. "
+"avgränsningsrutan), medan tvåvägspilarna för transformering placeras "
+"runt hela markeringen (ett eller flera objekt)."
 
 #: ../../source/selector-tool.rst:76 d95df5c174204434b14c2f600915d8b1
 msgid ""
@@ -208,11 +208,11 @@ msgid ""
 "after selecting more than one object by dragging a selection box, "
 "hold :kbd:`Shift` while you individually click on more objects."
 msgstr ""
-"Du kan kombinera de två metoderna: håll in :kbd:`Shift` för att behålla "
+"Du kan kombinera de två metoderna: håll in :kbd:`Skift` för att behålla "
 "tidigare markerade objekt markerade, och dra ut en markeringsruta för "
 "att lägga till fler objekt i markeringen. Det går också att göra "
 "tvärtom: när du har valt mer än ett objekt genom att dra i en "
-"markeringsruta håller du kvar :kbd:`Shift` medan du klickar på fler "
+"markeringsruta håller du kvar :kbd:`Skift` medan du klickar på fler "
 "objekt var för sig."
 
 #: ../../source/selector-tool.rst:82 bd400a0ee9a744d3a2b2482b991d52e0
@@ -220,9 +220,9 @@ msgid ""
 "Also notice how the :kbd:`Shift` key allows you to sort of toggle a "
 "selection: click to add to the selection, click again to remove."
 msgstr ""
-"Lägg också märke till hur du med :kbd:s `Shift`-tangent kan växla mellan "
-"olika urval: klicka för att lägga till något i urvalet, klicka igen för "
-"att ta bort något."
+"Lägg också märke till hur du med :kbd:s `Skift`-tangenten kan växla "
+"mellan olika urval: klicka för att lägga till något i urvalet, klicka "
+"igen för att ta bort något."
 
 #: ../../source/selector-tool.rst:85 77f1e9baa79b4424b9840293d22acc48
 msgid ""
@@ -233,7 +233,7 @@ msgid ""
 msgstr ""
 "Om du markerar med en ruta markeras som standard endast de objekt som "
 "var helt omslutna av rutan. Tryck på den fjärde knappen |touch-"
-"boundaries| i verktygsstyrningsfältet för att växla till att välja allt "
+"boundaries| i verktygskontrollfältet för att växla till att välja allt "
 "som rördes av rutan, helt eller delvis."
 
 #: ../../source/selector-tool.rst:113 05227db16f824d82b26acbf66e96b345
@@ -252,7 +252,7 @@ msgstr ""
 
 #: ../../source/selector-tool.rst:91 3f4cfee453eb46f7ab7a57c95eeebadd
 msgid "Selecting by touch"
-msgstr "Välja med pekskärm"
+msgstr "Välja med beröring"
 
 #: ../../source/selector-tool.rst:95 40e0c02b17334ad39b1485701433eb29
 msgid ""
@@ -278,7 +278,7 @@ msgstr ""
 
 #: ../../source/selector-tool.rst:101 dd2e8056eb0345568ef852986a5d95e8
 msgid "Paste on top of selection"
-msgstr "Klistra in på toppen av urvalet"
+msgstr "Klistra in överst på markering"
 
 #: ../../source/selector-tool.rst:103 b7f5e0f8ee474d35a98bdfaf38e3f78d
 msgid ""
@@ -297,8 +297,8 @@ msgid ""
 "A slice of tomato is inserted right between two sandwich slices using "
 "paste on top of selection"
 msgstr ""
-"En tomatskiva läggs precis mellan två smörgåsskivor med pasta ovanpå "
-"valet"
+"En tomatskiva läggs precis mellan två smörgåsskivor med klistra in "
+"överst på markeringen"
 
 #: ../../source/selector-tool.rst:109 b65ea48c0fd6413abd36ed334a9ca6b0
 msgid ""
